commit da funcionalidade colecao e troca de icone

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="logo.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet" integrity="" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 
